Bug squashes and fix compatibility issues with some plugins

--- a/style.css
+++ b/style.css
@@ -5,6 +5,43 @@ font-family: 'Nunito Sans', sans-serif;
 font-family: 'Open Sans', sans-serif;
 font-family: 'Permanent Marker', cursive;
 */
+@media (max-width: 1200px) {
+  legend {
+    font-size: calc(1.275rem + 0.3vw);
+  }
+  h1,
+  .h1 {
+    font-size: calc(1.375rem + 1.5vw);
+  }
+  h2,
+  .h2 {
+    font-size: calc(1.325rem + 0.9vw);
+  }
+  h3,
+  .h3 {
+    font-size: calc(1.3rem + 0.6vw);
+  }
+  h4,
+  .h4 {
+    font-size: calc(1.275rem + 0.3vw);
+  }
+  .display-1 {
+    font-size: calc(1.725rem + 5.7vw);
+  }
+  .display-2 {
+    font-size: calc(1.675rem + 5.1vw);
+  }
+  .display-3 {
+    font-size: calc(1.575rem + 3.9vw);
+  }
+  .display-4 {
+    font-size: calc(1.475rem + 2.7vw);
+  }
+  .close {
+    font-size: calc(1.275rem + 0.3vw);
+  }
+}
+
 :root {
 	--bg-black1: #0e1111;
 	--bg-black2: #232b2b;
@@ -51,8 +88,9 @@ body, html {
 	background-color: var(--dark-green);
 }
 
-.sec-2-wrapper{
 
+.mail{
+	color: var(--dark-green);
 }
 .left-right-wrapper{
 	flex:1;
@@ -61,6 +99,9 @@ body, html {
 
 }
 @media only screen and (min-width: 992px) { /*hide navbar for med and below screens*/
+	.sec2-content{
+		padding: 0px 2rem;
+	}
 	.sec-2{
 		position:relative;
 	}
@@ -76,7 +117,7 @@ body, html {
 		position: relative;
 		padding: 30px;
 		padding-right: 100px;
-		right: 400px;
+		right: 50%;
 		margin: 0px auto;
 		background-color:var(--bg-black1);
 		border-radius: 100px;
@@ -108,4 +149,76 @@ section{
 }
 #title{
 	color: #1DB954
+}
+
+
+.circle {
+  padding: 13px 20px;
+  border-radius: 50%;
+  background-color: var(--dark-green);
+  color: #fff;
+  max-height: 50px;
+  z-index: 2;
+}
+
+.vertical-line.row .col-2 {
+  align-self: stretch;
+}
+.vertical-line.row .col-2::after {
+  content: "";
+  position: absolute;
+  border-left: 3px solid var(--dark-green);
+  z-index: 1;
+}
+.vertical-line.row .col-2.bottom::after {
+  height: 50%;
+  left: 50%;
+  top: 50%;
+}
+.vertical-line.row .col-2.full::after {
+  height: 100%;
+  left: calc(50% - 3px);
+}
+.vertical-line.row .col-2.top::after {
+  height: 50%;
+  left: 50%;
+  top: 0;
+}
+
+
+.timeline div {
+  padding: 0;
+  height: 40px;
+}
+.timeline hr {
+  border-top: 3px solid var(--dark-green);
+  margin: 0;
+  top: 17px;
+  position: relative;
+}
+.timeline .col-2 {
+  display: flex;
+  overflow: hidden;
+}
+.timeline .corner {
+  border: 3px solid var(--dark-green);
+  width: 100%;
+  position: relative;
+  border-radius: 15px;
+}
+.timeline .top-right {
+  left: 50%;
+  top: -50%;
+}
+.timeline .left-bottom {
+  left: -50%;
+  top: calc(50% - 3px);
+}
+.timeline .top-left {
+  left: -50%;
+  top: -50%;
+}
+.timeline .right-bottom {
+  left: 50%;
+  top: calc(50% - 3px);
 }
